apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # Allow unlimited upload size
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarr.lab.ghostlabz.net
      secretName: sonarr-tls-cert
  rules:
    - host: sonarr.lab.ghostlabz.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
